--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,11 @@
     background-color: #000;
     font-family: sans-serif;
   }
+  h1,h2,h3,h4,h5,h6,span{
+    font-size: 18px;
+    color: #fff;
+    font-family: Poppins,sans-serif;
+  }
   li{
     overflow: hidden;
   }
@@ -21,5 +26,12 @@
   }
   .pxy__30{
     padding: 30px;
+  }
+  .container{
+    width: 92%;
+    margin: 0px auto;
+  }
+  .pz__10{
+    padding: 10px 0px;
   }
   
