--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,119 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    outline: none;
-  }
-  body{
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    font-family: sans-serif;
-  }
-  h1,h2,h3,h4,h5,h6,span{
-    font-size: 18px;
-    color: #fff;
-    font-family: Poppins,sans-serif;
-  }
-  li{
-    overflow: hidden;
-  }
-  .d__flex{
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  outline: none;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  font-family: sans-serif;
+}
+a {
+  text-decoration: none;
+  color: #fff;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span {
+  font-size: 18px;
+  color: #fff;
+  font-family: Poppins, sans-serif;
+}
+
+li {
+  overflow: hidden;
+}
+p {
+  font-size: 16px;
+  font-family: Poppins, sans-serif;
+}
+.d__flex {
+  display: flex;
+}
+.align__items__center {
+  align-items: center;
+}
+.justify__content__center {
+  justify-content: center;
+}
+.justify__content__space__between {
+  justify-content: space-between;
+}
+.mx__15 {
+  margin: 0px 15px;
+}
+
+.pxy__30 {
+  padding: 30px;
+}
+
+.container {
+  width: 92%;
+  margin: 0px auto;
+}
+
+.pz__10 {
+  padding: 10px 0px;
+}
+
+.sweet {
+  color: red;
+}
+
+.row {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  overflow: hidden;
+  align-items: flex-start;
+}
+.col__2 {
+    max-width: 50%;
     display: flex;
+    padding: 20px;
+    justify-content: center;
+    flex-direction: column;
   }
-  .mx__15{
-    margin: 0px 15px;
+  .col__3{
+    max-width: 33.333333%;
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 20px;
   }
-  .pxy__30{
-    padding: 30px;
-  }
-  .container{
-    width: 92%;
-    margin: 0px auto;
-  }
-  .pz__10{
-    padding: 10px 0px;
-  }
-  
+.component__space {
+  padding: 100px 0px;
+}
+button.btn {
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 5px;
+  border: 2px solid #f9004d;
+  background-color: #f9004d;
+  color: #fff !important;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: 0.4s all ease;
+  height: 50px;
+  width: 180px;
+  margin: 0px 10px;
+}
+.p__color {
+  color: rgba(198, 201, 216, 0.75);
+  font-size: 18px;
+  line-height: 30px;
+  font-family: Poppins, sans-serif;
+  margin-bottom: 15px;
+}
+button.about.btn.pointer:hover {
+  background: #fff;
+  color: #000 !important;
+}
