--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,52 +1,60 @@
-.home__bg{
+.home__bg {
     background-image: url(./../img/bg_bg_generator.png);
     background-color: #010101;
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
 }
-li.nav__items{
+
+li.nav__items {
     font-size: 18px;
     padding-bottom: 15px;
 }
-.home__content{
+
+.home__content {
     padding: 125px 0px;
 }
-h1.home__text{
+
+h1.home__text {
     font-size: 18px;
     font-weight: 400;
     letter-spacing: 3px;
-    color: rgba(198,201,216,.75)!important;
+    color: rgba(198, 201, 216, .75)!important;
 }
-h2.home__text{
+
+h2.home__text {
     font-size: 54px;
     line-height: 54px;
     font-weight: 800;
-    font-family: Montserrat,sans-serif;
+    font-family: Montserrat, sans-serif;
 }
-h3.home__text{
+
+h3.home__text {
     font-size: 50px;
     font-weight: 800;
-    font-family: Montserrat,sans-serif;
+    font-family: Montserrat, sans-serif;
     line-height: 40px;
 }
-h4.home__text{
+
+h4.home__text {
     font-size: 50px;
     font-weight: 800;
     line-height: 40px;
-    font-family: Montserrat,sans-serif;
-    
+    font-family: Montserrat, sans-serif;
 }
-.header{
+
+.header {
     transition: .4s all ease;
 }
-.header.active{
+
+.header.active {
     position: fixed;
     z-index: 1000;
     width: 100%;
     padding: 0px 30px;
     background-color: #191919;
 }
+
 .toggle__menu {
     display: flex;
     justify-content: flex-end;
@@ -54,6 +62,7 @@ h4.home__text{
     z-index: 1000;
     width: 100%;
 }
+
 ul.sidebar.d__flex {
     flex-wrap: wrap;
     height: 100%;
@@ -65,6 +74,7 @@ ul.sidebar.d__flex {
     top: 0%;
     flex-direction: column;
 }
-li.sideNavbar{
+
+li.sideNavbar {
     padding: 25px 30px;
 }
