--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 body {
   width: 100%;
   height: 100%;
-  background-color: #000;
+  background-color: rgb(0, 0, 0);
   font-family: sans-serif;
 }
 a {
