--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,20 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  box-sizing: border-box; /*en un elemento, el relleno y el borde se incluyen en el ancho y la altura:*/
   outline: none;
 }
-
 body {
   width: 100%;
   height: 100%;
-  background-color: rgb(0, 0, 0);
+  /*background-color: rgb(0, 0, 0);*/
   font-family: sans-serif;
 }
 a {
   text-decoration: none;
-  color: #fff;
+}
+.navbar-logo{
+  color: #fff ;
 }
 h1,
 h2,
@@ -22,11 +23,9 @@ h4,
 h5,
 h6,
 span {
-  font-size: 18px;
-  color: #fff;
+  font-size:30px;
   font-family: Poppins, sans-serif;
 }
-
 li {
   overflow: hidden;
 }
@@ -34,6 +33,8 @@ p {
   font-size: 16px;
   font-family: Poppins, sans-serif;
 }
+
+/*Navbar--Home*/
 .d__flex {
   display: flex;
 }
@@ -49,37 +50,32 @@ p {
 .mx__15 {
   margin: 0px 15px;
 }
-
 .pxy__30 {
   padding: 30px;
 }
-
 .container {
   width: 92%;
   margin: 0px auto;
 }
-
 .pz__10 {
   padding: 10px 0px;
 }
-
 .sweet {
-  color: red;
-}
-
-.row {
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  overflow: hidden;
-  align-items: flex-start;
-}
-.col__2 {
+    color: red;
+  }
+  .row {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    overflow: hidden;
+    align-items: flex-start;
+  }
+  .col__2 {
     max-width: 50%;
     display: flex;
     padding: 20px;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: column; 
   }
   .col__3{
     max-width: 33.333333%;
@@ -89,31 +85,32 @@ p {
     flex-direction: column;
     margin-top: 20px;
   }
-.component__space {
-  padding: 100px 0px;
-}
-button.btn {
-  font-size: 18px;
-  font-weight: 500;
-  border-radius: 5px;
-  border: 2px solid #f9004d;
-  background-color: #f9004d;
-  color: #fff !important;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  transition: 0.4s all ease;
-  height: 50px;
-  width: 180px;
-  margin: 0px 10px;
-}
-.p__color {
-  color: rgba(198, 201, 216, 0.75);
-  font-size: 18px;
-  line-height: 30px;
-  font-family: Poppins, sans-serif;
-  margin-bottom: 15px;
-}
-button.about.btn.pointer:hover {
-  background: #fff;
-  color: #000 !important;
-}
+  .component__space {
+    padding: 100px 0px;
+  }
+  button.btn {
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 5px;
+    border: 2px solid #f9004d;
+    background-color: #f9004d;
+    color: #fff !important;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    transition: 0.4s all ease;
+    height: 50px;
+    width: 180px;
+    margin: 0px 100%;
+  }
+  .p__color {
+    font-size: 18px;
+    line-height: 30px;
+    font-family: Poppins, sans-serif;
+    margin-bottom: 15px;
+  }
+  button.about.btn.pointer:hover {
+    background: #fff;
+    color: #000 !important;
+  }
+
+  
